--- a/www/templates/views.html
+++ b/www/templates/views.html
@@ -8,7 +8,7 @@
 <script id='loginT' type='text/ractive'>
 
 
-  <div id="wrapperMain" class="mainBackI" >
+  <div id="wrapperMainLog" class="" >
 
   		   <div id="logoLoginB">
 		<img src="img/logoForma.png">
