--- a/www/templates/views.html
+++ b/www/templates/views.html
@@ -5,7 +5,7 @@
 </script>
 
 <!--  LOGIN ============================================================-->
-<script id='loginT' type='text/ractive'>
+<script id='loginTemp' type='text/ractive'>
 
 
   <div id="wrapperMainLog" class="" >
