--- a/www/templates/views.html
+++ b/www/templates/views.html
@@ -324,7 +324,7 @@
 			         {{#if perms.des_max}}
 			           <tr>
 			          <th>Descuento Máximo</th>
-			          <td>{{data.precios[2]}}</td>
+			          <td>{{data.desc_max}}</td>
 			        </tr>
 			        {{/if}}
 
@@ -359,7 +359,7 @@
             <button on-tap="cerrarsesion" class="ui-btn" >cerrar sesión</button>
 
 
-            <div class="version">versión 1.2.1</div>
+            <div class="version">versión 1.2.4</div>
 
     </div><!-- /panel -->
 
